@@ -8,9 +8,10 @@ import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
+// J'ai supprimé l'import "java.util.stream.Collectors" qui ne sert plus à rien
 
 /**
  * Controller for user-related endpoints.
@@ -41,8 +42,11 @@ public class UserController {
      */
     @GetMapping("/me")
     public ResponseEntity<UserPrivateProfileDto> authenticatedUser(Authentication authentication) {
-        User user = (User) authentication.getPrincipal();
-        return ResponseEntity.ok(userMapper.toPrivateProfileDto(user));
+        // CORRECTION : Cast sécurisé (Pattern Matching) comme dans tes autres fichiers
+        if (authentication != null && authentication.getPrincipal() instanceof User user) {
+            return ResponseEntity.ok(userMapper.toPrivateProfileDto(user));
+        }
+        throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Non authentifié");
     }
 
     /**
@@ -65,9 +69,10 @@ public class UserController {
     @GetMapping
     public List<UserSummaryDto> getAllUsers() {
         List<User> users =  userService.getAll();
+        // CORRECTION SONAR : Remplacement de .collect(Collectors.toList()) par .toList()
         return users.stream()
                 .map(userMapper::toSummaryDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
